--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,11 @@
 			<artifactId>okta-spring-boot-starter</artifactId>
 			<version>3.0.5</version>
 		</dependency>
-
+		 <dependency>
+		        <groupId>com.h2database</groupId>
+		        <artifactId>h2</artifactId>
+		        <version>1.3.156</version>
+		    </dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
